2000-06-09  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (who_chunk): If the user has an expiring nomail
	class set, return information on the original class.

2000-06-08  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/List.pm (describe_class): Return nomail expiry times
	properly in as-setting mode.

	* lib/Mj/TextOutput.pm (set): Rewrite to handle multiple
        comma-separated states, some with complex syntax.

	* lib/Bf/Parser.pm (check_dsn_netscape): New function to check
        DSNs from netscape messaging server which don't have per-user
        info blocks.
	(check_dsn_diags): New function to extract diagnostice from
	the session transcipt in the human readable portion of the DSN if
	useful diagnostics were not found.
	(parse_dsn): Call check_dsn_netscape if no per-user info blocks
	are found, and call check_dsn_diags if there were any addresses
	for which we could not find useful diagnostics.

2000-06-07  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Format.pm (who): Don't run export mode unless the
	extra data is there; instead, fall back to a normal who.

	* lib/Majordomo.pm (who_chunk): In export mode, attach flag and
	class descriptions to the address.

	* lib/Mj/Format.pm (set): Rewrite; use new return values from the
	core.

	* lib/Majordomo.pm (_set): Change the return values a bit.  Return
	a hash for each address and generate class and flag descriptions.

	* lib/Mj/List.pm (set): Allow comma-separated list of settings.
	Clean up return value a bit.

2000-06-07  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/MailOut.pm (owner_done): Chomp out all bounce handling
        stuff; the function was getting way too large.
	(handle_bounce): New function.  Call parsers and generate bounce
	messages.

	* lib/Bf/Parser.pm (parse_dsn): If we didn't get a per-user
        information block, say we couldn't parse the bounce.

2000-06-05  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>
