@@ -25,12 +25,13 @@ my %MODULES = map {my $a; ($a=$_)=~s!/!::!g; $a=~s/\.p.$//; ("lib/$_" => "\$(INS
       Mj/Deliver/Connection.pm Mj/Deliver/Dest.pm Mj/Deliver/Envelope.pm
       Mj/Deliver/Prober.pm Mj/Deliver/QQEnvelope.pm Mj/Deliver/SMTP.pm
       Mj/Deliver/Sorter.pm Mj/Digest.pm Mj/Digest/Build.pm
-      Mj/Digest/Index.pm Mj/Digest/MIME.pm Mj/Digest/Text.pm Mj/File.pm
-      Mj/FileRepl.pm Mj/FileSpace.pm Mj/Format.pm Mj/Inform.pm Mj/List.pm
-      Mj/Lock.pm Mj/Log.pm Mj/MailOut.pm Mj/MIMEParser.pm Mj/Parser.pm
-      Mj/Resend.pm Mj/SimpleDB.pm Mj/SimpleDB/DB.pm Mj/SimpleDB/Text.pm
-      Mj/SubscriberList.pm Mj/TextOutput.pm Mj/Token.pm Mj/TokenDB.pm
-      Bf/Parser.pm Bf/Sender.pm mj_cf_data.pl mj_cf_defs.pl );
+      Mj/Digest/Index.pm Mj/Digest/MIME.pm Mj/Digest/Text.pm Mj/FakeLog.pm
+      Mj/File.pm Mj/FileRepl.pm Mj/FileSpace.pm Mj/Format.pm Mj/Inform.pm
+      Mj/List.pm Mj/Lock.pm Mj/Log.pm Mj/MailOut.pm Mj/MIMEParser.pm
+      Mj/Parser.pm Mj/Resend.pm Mj/SimpleDB.pm Mj/SimpleDB/DB.pm
+      Mj/SimpleDB/Text.pm Mj/SubscriberList.pm Mj/TextOutput.pm Mj/Token.pm
+      Mj/TokenDB.pm Bf/Parser.pm Bf/Sender.pm mj_cf_data.pl mj_cf_defs.pl
+      );
 
 #### Prerequisite checking
 ($ok, %have) = check_prereq
