@@ -1,3 +1,8 @@
+2000-06-10  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>
+
+	* lib/Bf/Parser.pm (check_dsn_diags): Add another possible
+	pattern.
+
 2000-06-09  Jason L Tibbitts III  <tibbs@math.uh.edu>
 
 	* lib/Majordomo.pm (who_chunk): If the user has an expiring nomail
